# neco

./: CHANGELOG.md  Cargo.toml
agent/: CHANGELOG.md  Cargo.toml
agent/src/: lib.rs
assets/: providers.toml
config/: CHANGELOG.md  Cargo.toml
config/src/: lib.rs
context/: CHANGELOG.md  Cargo.toml
context/src/: lib.rs
core/: CHANGELOG.md  Cargo.toml
core/src/: lib.rs
crates/agent/: Cargo.toml
crates/agent/src/: engine.rs  error.rs  events.rs  inter_agent.rs  lib.rs  tools.rs
crates/assets/prompts/: base.md  context--compact.md  tool--activate--mcp.md  tool--activate--skill.md  tool--activate.md  tool--context--compact.md  tool--context--observe.md  tool--fs--delete.md  tool--fs--edit.md  tool--fs--list.md  tool--fs--read.md  tool--fs--write.md  tool--multi-agent--report.md  tool--multi-agent--send.md  tool--multi-agent--spawn.md  tool--multi-agent-child.md  tool--multi-agent.md
crates/config/: Cargo.toml
crates/config/src/: lib.rs  loader.rs  merger.rs  paths.rs  source.rs  validator.rs
crates/context/: Cargo.toml
crates/context/src/: compression.rs  config.rs  lib.rs  manager.rs  observer.rs  tokenizer.rs
crates/core/: Cargo.toml
crates/core/src/: errors.rs  events.rs  ids.rs  kernel.rs  lib.rs  messages.rs  prompt.rs  security.rs  tool.rs  traits.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs
crates/model/: Cargo.toml
crates/model/src/: client.rs  error.rs  lib.rs  model_group.rs  providers.rs  registry.rs  stream.rs  tool_call_handler.rs  types.rs
crates/model/src/providers/: adapter.rs  anthropic.rs  openai.rs  tests.rs
crates/session/: Cargo.toml
crates/session/src/: agent.rs  context_builder.rs  lib.rs  manager.rs  memory.rs  message.rs  message_routing.rs  session.rs  storage.rs
crates/session/src/memory/: file_backend.rs  lib.rs
crates/session/src/storage/: file.rs  lib.rs  memory.rs
crates/skill/: Cargo.toml
crates/skill/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/tool/: Cargo.toml
crates/tool/src/: activate.rs  context.rs  error.rs  exec.rs  fs.rs  lib.rs  multi_agent.rs  registry.rs  security.rs  state.rs  tui.rs  workflow.rs
crates/ui/: Cargo.toml
crates/ui/src/: cli.rs  error.rs  lib.rs  service.rs  traits.rs  tui.rs
mcp/: CHANGELOG.md  Cargo.toml
mcp/src/: lib.rs
model/: CHANGELOG.md  Cargo.toml
model/src/: lib.rs
progress/: REQUIREMENT-FUTURE.md  REQUIREMENT.md  TECH-ACTIVATION-COMPACTION.md  TECH-AGENT.md  TECH-Agent.md  TECH-CONFIG-RESOLUTION.md  TECH-CONFIG.md  TECH-CONTEXT.md  TECH-Concurrency.md  TECH-MCP.md  TECH-MODEL-RUNTIME.md  TECH-MODEL.md  TECH-Model.md  TECH-PROMPT.md  TECH-RELIABILITY-ISOLATION.md  TECH-SESSION-AGENT-TREE.md  TECH-SESSION.md  TECH-SKILL.md  TECH-Session.md  TECH-TOOL.md  TECH-TOOLS-INTERFACE.md  TECH-UI.md  TECH-WORKFLOW-ENGINE.md  TECH-WORKFLOW.md  TECH-Workflow.md  TECH.md  external-acp.md  external-agentskills.md  external-async-openai.md  external-mcp-interaction-flows.md  external-programmatic-tool-calling.md  external-ratatui.md  external-rmcp-examples.md  external-rmcp-exploration-summary.md  external-rmcp.md  external-zeroclaw.md
session/: CHANGELOG.md  Cargo.toml
session/src/: lib.rs
skill/: CHANGELOG.md  Cargo.toml
skill/src/: lib.rs
src/: main.rs
storage/: CHANGELOG.md  Cargo.toml
storage/src/: lib.rs
tool/: CHANGELOG.md  Cargo.toml
tool/src/: lib.rs
ui/: CHANGELOG.md  Cargo.toml
ui/src/: lib.rs
