[workspace]
members = ["core"]
resolver = "3"
default-members = ["core"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
authors = ["MiyakoMeow"]

[profile.release]
# 性能优化配置（与 TECH.md 文档保持一致）
opt-level = 2          # 平衡优化与编译时间
lto = "fat"            # Full LTO 优化
codegen-units = 1      # 最佳优化
strip = true           # 移除调试符号

[workspace.lints.rust]
missing_docs = "deny"
dead_code = "deny"
unused_crate_dependencies = "deny"
unused_extern_crates = "deny"
unused_imports = "deny"
unused_variables = "deny"
unused_assignments = "deny"
unused_mut = "deny"
unused_braces = "deny"
unused_must_use = "deny"
unused_unsafe = "deny"
unused_attributes = "deny"
unused_macros = "deny"
unused_allocation = "deny"
unused_labels = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
private_doc_tests = "deny"
invalid_html_tags = "deny"
bare_urls = "deny"

[workspace.lints.clippy]
pedantic = "deny"

missing_docs_in_private_items = "deny"

missing_errors_doc = "deny"
must_use_candidate = "deny"
mod_module_files = "deny"

indexing_slicing = "deny"
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
panic_in_result_fn = "deny"

print_stderr = "deny"
print_stdout = "deny"

# Assert-related lints
assertions_on_constants = "deny"
assertions_on_result_states = "deny"
bool_assert_comparison = "deny"