[package]
name = "neoco-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
neoco-core.workspace = true
neoco-model.workspace = true
neoco-tool.workspace = true
neoco-skill.workspace = true
neoco-context.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
ulid.workspace = true
regex.workspace = true
tracing.workspace = true
tokio.workspace = true
futures.workspace = true
parking_lot.workspace = true

[lints]
workspace = true
