[package]
name = "neoco-config"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
dirs.workspace = true
url.workspace = true
zeroize.workspace = true
futures.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
notify.workspace = true
tokio.workspace = true
smol_str.workspace = true
indexmap.workspace = true

[lints]
workspace = true

[lib]
doc = false
