[package]
name = "neoco-context"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
neoco-core.workspace = true
neoco-model.workspace = true
async-trait.workspace = true
chrono.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
parking_lot.workspace = true

[lints]
workspace = true
