[package]
name = "neoco-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ulid.workspace = true
async-trait.workspace = true
tokio.workspace = true
dirs.workspace = true
include_dir.workspace = true
neoco-config.workspace = true
reqwest.workspace = true
smol_str.workspace = true
indexmap.workspace = true
flume.workspace = true
parking_lot.workspace = true

[lints]
workspace = true
