[package]
name = "neoco-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
neoco-core.workspace = true
neoco-config.workspace = true
tokio.workspace = true
dashmap.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rmcp.workspace = true
tracing.workspace = true
http.workspace = true
parking_lot.workspace = true
smol_str.workspace = true

[dev-dependencies]
tokio-test.workspace = true
