[package]
name = "neoco-session"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
neoco-core.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
serde_yaml.workspace = true
smol_str.workspace = true
parking_lot.workspace = true

[lints]
workspace = true
