[package]
name = "neoco-skill"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
neoco-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
smol_str.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true

[lib]
doc = false
