[package]
name = "neoco-storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
neoco-core.workspace = true
neoco-session.workspace = true
neoco-config.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
toml.workspace = true
tokio.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true

[lints]
workspace = true
