[package]
name = "neoco-tool"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
neoco-config.workspace = true
neoco-core.workspace = true
neoco-context.workspace = true
neoco-model.workspace = true
neoco-skill.workspace = true
neoco-mcp.workspace = true
async-trait.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
smol_str.workspace = true
indexmap.workspace = true
parking_lot.workspace = true

[lints]
workspace = true
