[package]
name = "neoco-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
neoco-core.workspace = true
neoco-session.workspace = true
neoco-config.workspace = true
neoco-model.workspace = true
neoco-agent.workspace = true
neoco-tool.workspace = true
neoco-skill.workspace = true
neoco-context.workspace = true
neoco-mcp.workspace = true

thiserror.workspace = true

async-trait.workspace = true
clap.workspace = true
crossterm.workspace = true
ratatui.workspace = true
serde_json.workspace = true
tokio.workspace = true
parking_lot.workspace = true

[features]
default = []
